fix word wrap

--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,16 @@ input[type="text"]:focus {
 }
 
 .message-bubble-bot {
-  white-space: pre;
   background-color: rgb(242, 244, 246);
   color: black;
   border-radius: 10px 10px 10px 0;
   padding: 10px;
   margin: 5px;
   max-width: 500px;
+  word-wrap: break-word; /* IE>=5.5 */
+  white-space: pre; /* IE>=6 */
+  white-space: -moz-pre-wrap; /* For Fx<=2 */
+  white-space: pre-wrap; /* Fx>3, Opera>8, Safari>3*/
 }
 
 .message-input {
